@@ -11,6 +11,7 @@
  * Labels for D elements in the outline and quick outline now show type (for variables) and return type (for functions).
  * Icons for D elements in all viewers now show protection attribute info.
    * This can be configured (overlay for all elements, or JDT-style icon overlays) in the new Appearance preference page.
+ * Fixed the Open D Type dialog so that it shows the standard D icons as the rest of the IDE.
  * Fixed parser NPE bug when using inout as const wildcard declarator.
  * Fixed parser error when "alias this" appeared as a statement.
  * Fixed bugs where parser and semantic engine ignored the parameters of constructors.
